# fire-1099

./: pyproject.toml
fire/entities/: state_totals.py
fire/translator/: translator.py
